tests/elab_fail/refineOccursCheck.lean.out.expected
refineOccursCheck.lean:11:2-11:14: error: `refine` tactic failed, value
  ax ?a
depends on the main goal metavariable `?a`
